--- a/app/elements/navigation-bar/navigation-bar.html
+++ b/app/elements/navigation-bar/navigation-bar.html
@@ -289,7 +289,7 @@
             <a href="" aria-hidden="true" on-click="FnCancelEnrollment">Cancel Enrollment</a>
            </li>
            <li id="withdrawalprocess">
-            <a href="" aria-hidden="true" on-click="FnWithdrawal">Wthdrawal Processing</a>
+            <a href="" aria-hidden="true" on-click="FnWithdrawal">Withdrawal Processing</a>
            </li>
            <li id="enrollmentreport">
             <a href="" aria-hidden="true" on-click="FnEnrollmentreport">Enrollment Report</a>
@@ -405,17 +405,17 @@
             <!-- <li id="pendingcheques">
             <a href="" aria-hidden="true" on-click="FnPendingCheques">Pending Cheques</a>
             </li> -->
-           </ul>
-            </li>
-            <!-- <li id="detailduereport">
-            <a href="" aria-hidden="true" on-click="FnDetailduereport">Due report<span class="fa arrow"></span></a>
-            </li> -->
+            </ul>
+            </li>            
             <li id="dailycollectiondashboard">
             <a href="" aria-hidden="true" on-click="FnDailycollectionDashboard">Daily Collection Dashboard<span class="fa arrow"></span></a>
             </li>
-            <!-- <li id="reportprocessing">
+            <li id="detailduereport">
+            <a href="" aria-hidden="true" on-click="FnDetailduereport">Due report<span class="fa arrow"></span></a>
+            </li>
+            <li id="reportprocessing">
             <a href="" aria-hidden="true" on-click="FnProcessreport">Process Report<span class="fa arrow"></span></a>
-            </li> -->
+            </li>
             </ul>
           </li>         
 
