--- a/app/elements/detailed-feedue-report/detailed-feedue-report.html
+++ b/app/elements/detailed-feedue-report/detailed-feedue-report.html
@@ -13,8 +13,8 @@
           <div class="row">
             <div class="col-md-12">
                  <div class="col-md-3" style="margin-top: 0%;">
-                 <paper-dropdown-menu id="duereportacademicyear" label="Academic Year" on-iron-select="FnSelectAcademicYear">
-                  <paper-listbox class="dropdown-content" selected="{{selectedacademicyear}}" id="duereportacademicyear" attr-for-selected="value">
+                 <paper-dropdown-menu id="deatiledduereportacademicyear" label="Academic Year" on-iron-select="FnSelectAcademicYear">
+                  <paper-listbox class="dropdown-content" selected="{{selectedacademicyear}}" id="deatiledduereportacademicyear" attr-for-selected="value">
                   <template  is="dom-repeat" items="{{academicarr}}" as="item">
                   <paper-item value="{{item.academic_year}}">{{item.academic_year}}</paper-item>
                   </template>
@@ -23,7 +23,7 @@
                  </div>
                  <div class="col-sm-2" style="margin-left: 5%;">
                 <paper-dropdown-menu label="Grade" attr-for-selected="value">
-                  <paper-menu id="duereportgrade" class="dropdown-content" required on-iron-select="FnSelectGrade" valueattr="value" >
+                  <paper-menu id="deatiledduereportgrade" class="dropdown-content" required on-iron-select="FnSelectGrade" valueattr="value" >
                     <template  is="dom-repeat" items="{{gradearr}}" as="item">
                     <paper-item value="{{item.grade_id}}">{{item.grade_name}}</paper-item>
                     </template>
@@ -32,7 +32,7 @@
                 </div>  
                 <div class="col-sm-2" style="margin-left: 5%;">
                 <paper-dropdown-menu label="Select Type" attr-for-selected="value">
-                  <paper-menu id="duereporttype" class="dropdown-content" required on-iron-select="FnSelectType" valueattr="value" >
+                  <paper-menu id="deatiledduereporttype" class="dropdown-content" required on-iron-select="FnSelectType" valueattr="value" >
                     <!-- <template  is="dom-repeat" items="{{}}" as="item"> -->
                     <paper-item value="all">All</paper-item>
                     <paper-item value="new">New</paper-item>
@@ -44,7 +44,7 @@
                 <div class="col-md-1" style="margin-top: 1%;margin-left: 20%;">
                 <p>Download
                 <a href="#">
-                <span disabled="{{disabledownload}}" class="glyphicon glyphicon-download-alt" onclick="tableToExcel('duereportt', 'Due report')"></span>
+                <span disabled="{{disabledownload}}" class="glyphicon glyphicon-download-alt" onclick="tableToExcel('deatiledduereportt', 'Due report')"></span>
                 </a>
                 </p>
                 </div> 
@@ -52,26 +52,22 @@
           </div>
         </div>
     </div>
-    <div id="duependingfeereportt">
+    <div id="deatiledduereportt">
      <table class="table table-hover">
       <thead>
       <tr>
-        <th>Sno</th><th>Enr/Enq No</th><th>Student Name</th><th>Grade</th><th>Type</th><th>Actual Fee</th><th>Discount</th><th>Total Fee</th><th>Paid Fee</th><th>Pending Fee</th>
+        <th colspan="6"></th><th colspan="4">Fee Structure</th><th colspan="4">Discount On Fee</th><th colspan="2">Commitment Fee Paid</th><th colspan="2">1st Installment Fee Paid</th><th colspan="2">2nd Installment Fee Paid</th><th colspan="2">3rd Installment Fee Paid</th><th colspan="1"></th><th colspan="2">Commitment Fee Due</th><th colspan="2">1st Installment Fee Due</th><th colspan="2">2nd Installment Fee Due</th><th colspan="2">3rd Installment Fee Due</th><th colspan="1"></th>
+      </tr>
+      <tr>
+        <th>Sno</th><th>Student Name</th><th>Father Name</th><th>Grade</th><th>Type</th><th>Admission No</th><th>Kit Fee</th><th>Annual Fee</th><th>Tuition Fee</th><th>Total Fee</th><th>Discount On Kit Fee</th><th>Discount On Annual Fee</th><th>Discount On Tution Fee</th><th>Total Discount On Fee</th><th>School Kit Fee</th><th>Annual Fee</th><th>Annual Fee</th><th>Tuition Fee</th><th>Annual Fee</th><th>Tuition Fee</th><th>Annual Fee</th><th>Tuition Fee</th><th>Total Fee Paid</th><th>School Kit Fee</th><th>Annual Fee</th><th>Annual Fee</th><th>Tuition Fee</th><th>Annual Fee</th><th>Tuition Fee</th><th>Annual Fee</th><th>Tuition Fee</th><th>Total Fee Due</th>
       </tr>
       </thead>
       <tbody>
-      <template  is="dom-repeat" items="{{duearr}}" as="item">
-        <tr><td>{{item.sno}}</td><td>{{item.admission_no}}</td><td>{{item.student_name}}</td><td>{{item.class_for_admission}}</td><td>{{item.admission_status}}</td><td>{{item.fees}}</td><td>{{item.discount_amount}}</td><td>{{item.total_amount}}</td><td>{{item.paid_amount}}</td><td>{{item.pending_amount}}</td></tr>
+      <template  is="dom-repeat" items="{{detailduearr}}" as="item">
+        <tr><td>{{item.sno}}</td><td>{{item.student_name}}</td><td>{{item.father_name}}</td><td>{{item.grade}}</td><td>{{item.admission_status}}</td><td>{{item.admission_no}}</td><td>{{item.kitfee}}</td><td>{{item.annualfee}}</td><td>{{item.tutionfee}}</td><td>{{item.totalfee}}</td><td>{{item.discountkitfee}}</td><td>{{item.discountannualfee}}</td><td>{{item.discounttutionfee}}</td><td>{{item.discounttotal}}</td><td>{{item.commitkitfee}}</td><td>{{item.commitannualfee}}</td><td>{{item.ins1annualfee}}</td><td>{{item.ins1tutionfee}}</td><td>{{item.ins2annualfee}}</td><td>{{item.ins2tutionfee}}</td><td>{{item.ins3annualfee}}</td><td>{{item.ins3tutionfee}}</td><td>{{item.totalpaidfee}}</td><td>{{item.duecommitkitfee}}</td><td>{{item.duecommitannualfee}}</td><td>{{item.dueins1annualfee}}</td><td>{{item.dueins1tutionfee}}</td><td>{{item.dueins2annualfee}}</td><td>{{item.dueins2tutionfee}}</td><td>{{item.dueins3annualfee}}</td><td>{{item.dueins3tutionfee}}</td><td>{{item.duetotalpaidfee}}</td></tr>
       </template>
-      <!-- <tr><th colspan="11" style="text-align: right;">Total Amount: &nbsp;&nbsp;{{totalamount}}</th></tr> -->
       </tbody>
     </table>    
-
-    <table style="margin-left: 70%;" hidden$="{{hidecount}}">
-      <tr><th>No of students paid: </th><th>{{paidcount}}</th></tr>
-      <tr><th>No of student not paid: </th><th>{{notpaidcount}}</th></tr>
-      <tr><th>Total students: </th><th>{{totalcount}}</th></tr>
-    </table>
     </div>
     <fee-report-service id="feereportservice"></fee-report-service>
   </template>
@@ -98,8 +94,7 @@
       is: 'detailed-feedue-report',
       ready:function(){
         this.flag=0;
-        this.hidecount=true;
-        
+        this.hidecount=true;        
       },
       FnHideView:function(){
         this.hidecount=false;
@@ -124,24 +119,24 @@
       FnSelectType:function(e){
         this.flag=1;
         type=(e.target.selectedItem.textContent).trim();
-        this.$.feereportservice.FnFetchAllStudentStructureService(academicyear,grade);
+        // this.$.feereportservice.FnFetchAllStudentStructureService(academicyear,grade);
         this.$.feereportservice.FnFetchDueReportService(academicyear,grade,type);
       },
       FnView:function(){
-        this.$.feereportservice.FnFetchAllStudentStructureService(academicyear,grade);
+        // this.$.feereportservice.FnFetchAllStudentStructureService(academicyear,grade);
         this.$.feereportservice.FnFetchDueReportService(academicyear,grade,type);
       },
       FnRefresh:function(){
         this.duearr=[];
-        document.querySelector('#feedueacademicyear').selected=-1;
-        document.querySelector('#feeduegrade').selected=-1;
-        document.querySelector('#feeduetype').selected=-1;
-        this.hidecount=true;
+        document.querySelector('#deatiledduereportacademicyear').selected=-1;
+        document.querySelector('#deatiledduereportgrade').selected=-1;
+        document.querySelector('#deatiledduereporttype').selected=-1;
+        
       },
       FnSelectGrade:function(e){
         grade=(e.target.selectedItem.textContent).trim();
         if(this.flag==1){
-        this.$.feereportservice.FnFetchAllStudentStructureService(academicyear,grade);
+        // this.$.feereportservice.FnFetchAllStudentStructureService(academicyear,grade);
         this.$.feereportservice.FnFetchDueReportService(academicyear,grade,type);
         }
       },
@@ -149,7 +144,7 @@
         academicyear=(e.target.selectedItem.textContent).trim();
         localStorage.setItem("curr_sess_academicyear",academicyear);
         if(this.flag==1){
-        this.$.feereportservice.FnFetchAllStudentStructureService(academicyear,grade);
+        // this.$.feereportservice.FnFetchAllStudentStructureService(academicyear,grade);
         this.$.feereportservice.FnFetchDueReportService(academicyear,grade,type);
 
         }
