--- a/app/elements/fee-report-service/fee-report-service.html
+++ b/app/elements/fee-report-service/fee-report-service.html
@@ -1926,195 +1926,13 @@
         this.$.duereportajax.generateRequest();
       },
       duereportResponse:function(e){
-        var totalarr=e.detail.response.totalarr;
-        var paidarr=e.detail.response.paidarr;
-        var inssplit=e.detail.response.inssplit;
-        var feesplit=e.detail.response.feesplit;
-        var bindarr=[];
-        // alert(JSON.stringify(feesplit));
-        // alert(JSON.stringify(totalarr));
-        // alert(JSON.stringify(this.structarr));
-        for(var i=0;i<totalarr.length;i++){
-          for(var j=0;j<this.structarr.length;j++){
-            var obj={};
-            var flag=0;
-            // alert(totalarr[i].academic_year+"  "+this.structarr[j].academicyear+"  "+totalarr[i].admission_year+"  "+this.structarr[j].admissionyear+"  "+totalarr[i].grade+"  "+this.structarr[j].grade);
-            if(totalarr[i].academic_year==this.structarr[j].academicyear&&totalarr[i].admission_year==this.structarr[j].admissionyear&&totalarr[i].class_for_admission==this.structarr[j].grade){
-              flag=1;
-              obj.admission_no=totalarr[i].admission_no;
-              obj.student_name=totalarr[i].student_name;
-              obj.grade=totalarr[i].grade;
-              var ar=[];
-              var obj1={};
-              obj1.Kitfee=this.structarr[j].Kitfee;
-              obj1.Annualfee=this.structarr[j].Annualfee;
-              obj1.Tutionfee=this.structarr[j].Tutionfee;
-              obj1.total=this.structarr[j].total;
-              ar.push(obj1);
-              obj.structure=ar;              
-            }
-            if(flag==1)
-            bindarr.push(obj);
+        var arr=e.detail.response.returnval;
+        if(arr!='no rows'){
+          for(var i=0;i<arr.length;i++){
+            arr[i].sno=i+1;
           }
+          document.querySelector('detailed-feedue-report').detailduearr=arr;
         }
-
-        // alert(JSON.stringify(bindarr));
-
-        var arr1=[];
-        var arr2=[];
-        var arr3=[];
-        var arr4=[];
-        var arr5=[];
-        // alert(JSON.stringify(paidarr));
-        for(var i=0;i<paidarr.length;i++){
-         if(paidarr[i].installment_pattern=="1"&&paidarr[i].paymenttype_flag=="0"){
-          arr1.push(paidarr[i]);
-         }
-         if(paidarr[i].installment_pattern=="3"&&paidarr[i].paymenttype_flag=="0"){
-          arr2.push(paidarr[i]);
-         }
-         if(paidarr[i].installment_pattern=="4"&&paidarr[i].paymenttype_flag=="0"){
-          arr3.push(paidarr[i]);
-         }
-         if(paidarr[i].installment_pattern=="1"&&paidarr[i].paymenttype_flag=="1"){
-          arr4.push(paidarr[i]);
-         }
-         if(paidarr[i].installment_pattern=="3"&&paidarr[i].paymenttype_flag=="1"){
-          arr5.push(paidarr[i]);
-         }
-        }
-        // alert(JSON.stringify(arr1));
-        // alert(JSON.stringify(arr2));
-        // alert(JSON.stringify(arr3));
-        // alert(JSON.stringify(arr4));
-        // alert(JSON.stringify(arr5));
-        var discountsplit=[];
-        for(var i=0;i<arr1.length;i++){        
-        for(var j=0;j<feesplit.length;j++)
-        {       
-        if(arr1[i].admission_no==feesplit[j].admission_no){
-        var a=[];
-        var discount=[];
-        var nameobj={"installment":""};
-        nameobj.admissionno=feesplit[j].admission_no;
-        nameobj.studentname=feesplit[j].student_name;
-        nameobj.installment=feesplit[j].installment; 
-        var o={};
-        // alert(feesplit[j].feetype+"  "+feesplit[j].discount_amount);
-        if(arr1[i].installment_pattern=="1")
-        if((feesplit[j].feetype="Annual fee"&&feesplit[j].discount_amount>0)||(feesplit[j].feetype="Kit fee"&&feesplit[j].discount_amount>0)){
-        o.feetype=feesplit[j].feetype;
-        o.discountamount=feesplit[j].discount_amount;
-        discount.push(o);
-        nameobj.discount=discount;
-        }
-        discountsplit.push(nameobj);        
-        }
-        }
-        }
-        // alert(JSON.stringify(discountsplit));
-
-        for(var i=0;i<bindarr.length;i++){
-          for(var j=0;j<discountsplit.length;j++){
-            if(bindarr[i].admission_no==discountsplit[j].admissionno){
-              var arr=[];
-              for(var k=0;k<discountsplit[j].discount;k++){
-                var obj={};
-                if(discountsplit[j].discount[k].feetype="Kit fee")
-                  obj.kitdiscount=discountsplit[j].discount[k].discountamount;
-                if(discountsplit[j].discount[k].feetype="Annual fee")
-                  obj.annualdiscount=discountsplit[j].discount[k].discountamount;
-                if(discountsplit[j].discount[k].feetype="Tution fee")
-                  obj.tutiondiscount=discountsplit[j].discount[k].discountamount;
-              }
-              arr.push(obj);
-              bindarr[i].discount=arr;
-            }
-          }
-        }
-
-        var split=[];
-        for(var i=0;i<arr1.length;i++){        
-        for(var j=0;j<feesplit.length;j++)
-        {       
-        if(arr1[i].admission_no==feesplit[j].admission_no){
-        var a=[];
-        var discount=[];
-        var nameobj={"installment":""};
-        nameobj.admissionno=feesplit[j].admission_no;
-        nameobj.studentname=feesplit[j].student_name;
-        nameobj.installment=feesplit[j].installment; 
-        var amt=0;
-        var actamt=0;
-        var obj={"feetype":"","feetypeamount":""};
-        obj.feetype=feesplit[j].feetype;
-        obj.feetypeamount=feesplit[j].feetype_amount;
-        a.push(obj);
-        var o={};
-        if(feesplit[j].feetype="Annual fee"&&feesplit[j].discount_amount>0){
-        o.feetype=feesplit[j].feetype;
-        o.discountamount=feesplit[j].discount_amount;
-        discount.push(o);
-        nameobj.discount=discount;
-        }
-        for(var k=j+1;k<feesplit.length;k++)
-        {
-           // alert(termarr[i].insno+" "+termarr[j].insno);
-           if(feesplit[j].installment==feesplit[k].installment&&feesplit[j].admission_no==feesplit[k].admission_no)
-           {
-             var obj1={"feetype":"","feetypeamount":""}
-             obj1.feetype=feesplit[k].feetype;
-             obj1.feetypeamount=feesplit[k].feetype_amount;
-             if(feesplit[k].feetype_amount>0)
-             a.push(obj1);
-             feesplit.splice(k,1);
-             k--;
-           }
-        }
-        nameobj.fees=a;
-        split.push(nameobj);
-        a=[];        
-        }
-        }
-        }
-
-        // alert(JSON.stringify(bindarr));
-        // alert(JSON.stringify(split));
-
-        for(var i=0;i<bindarr.length;i++){
-          for(var j=0;j<split.length;j++){
-            if(bindarr[i].admission_no==split[j].admissionno){
-              if(split[j].installment=="Commitment Fee"){
-                bindarr[i].commitpaid=split[j].fees;
-              }
-              if(split[j].installment=="Installment1"){
-                bindarr[i].ins1paid=split[j].fees;
-              }
-              if(split[j].installment=="Installment2"){
-                bindarr[i].ins2paid=split[j].fees;
-              }
-              if(split[j].installment=="Installment3"){
-                bindarr[i].ins3paid=split[j].fees;
-              }
-            }
-          }
-        }
-        // alert(JSON.stringify(bindarr));
-        for(var i=0;i<bindarr.length;i++){
-          
-        }        
-      },
-      standardpattern:function(paidarr,inssplit,feesplit){
-
-      },
-      lumpsumpattern:function(paidarr,inssplit,feesplit){
-
-      },
-      commitlumpsumpattern:function(paidarr,inssplit,feesplit){
-
-      },
-      custompatternn:function(paidarr,inssplit,feesplit){
-
       },
       FnFetchDailycollectionDashboardService:function(academicyear,grade,type){
         this.fetchdailycollectiondashboardurl=sessionStorage.getItem("addrinfo")+"/fetchdailycollectiondashboard-service";
