detailed report lumpsum & conversion report

--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -295,6 +295,11 @@
             <div class="col-md-12">
               <duecheques-report></duecheques-report>
             </div>
+          </section>  
+          <section data-category="enquiry-conversion-report">
+            <div class="col-md-12">
+              <enquiry-conversion-report></enquiry-conversion-report>
+            </div>
           </section>     
           </iron-pages>
           </div>
