--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -265,3 +265,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="duereport-service/duereport-service.html">
 <link rel="import" href="dailyincome-report/dailyincome-report.html">
 <link rel="import" href="duecheques-report/duecheques-report.html">
+<link rel="import" href="enquiry-conversion-report/enquiry-conversion-report.html">
+<link rel="import" href="foreports-service/foreports-service.html">
