--- a/app/elements/schedule-service/schedule-service.html
+++ b/app/elements/schedule-service/schedule-service.html
@@ -486,6 +486,7 @@
         document.querySelector('detailed-feedue-report').academicarr=e.detail.response.returnval;
         document.querySelector('dailycollection-dashboard').academicarr=e.detail.response.returnval;
         document.querySelector('process-report').academicarr=e.detail.response.returnval;
+        document.querySelector('enquiry-conversion-report').academicarr=e.detail.response.returnval;
       },
       fetchadmissionyearService:function(){        
         this.fetchadmissionyearurl=sessionStorage.getItem("addrinfo")+"/fetchadmissionyear-service"
