--- a/app/elements/enquiry-datepicker/enquiry-datepicker.html
+++ b/app/elements/enquiry-datepicker/enquiry-datepicker.html
@@ -38,6 +38,7 @@
       {
         this.showdate=moment(new Date()).format('L');
         localStorage.setItem("localsess_curr_date",this.showdate);
+        localStorage.setItem("localsess_enqdate",this.showdate);
       },
       FnShowDialog:function(){
         this.date=new Date();
@@ -56,6 +57,7 @@
           if(dd1.getDate()==dd2.getDate()){
           this.showdate = moment(this.$.picker.date).format('L');
           localStorage.setItem("localsess_start_date",this.showdate);
+          localStorage.setItem("localsess_enqdate",this.showdate);
           document.querySelector('pre-apps').getenquirydate(this.showdate);
           }
           else{
@@ -66,6 +68,7 @@
           else{
           this.showdate = moment(this.$.picker.date).format('L');
           localStorage.setItem("localsess_start_date",this.showdate);
+          localStorage.setItem("localsess_enqdate",this.showdate);
           document.querySelector('pre-apps').getenquirydate(this.showdate);
           }
         }
